Small fixes on evaluation section

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -13,21 +13,21 @@ poseen de forma inherente.
 Los sistemas RGI, como cualquier otro sistema, son susceptibles de ser
 sometidos a evaluación, con el fin de que sus usuarios se encuentren en
 condiciones de valorar su efectividad y, de este modo, adquieran confianza
-en los mismos
+en los mismos.
 
 El proceso de los sistemas RGI en principio son bastante parecidos a los 
-sistemas SRI estándar, variando solo algunos pasos específicos que el propio
+SRI estándar, variando solo algunos pasos específicos que el propio
 sistema impone dada las caracteristicas del mismo y del problema que pretende
 resolver, como la detección de entidades geográficas. \cite{Kornai2005}
 
 En este punto surge una nueva cuestión, si bien podría parecer trivial a
 primera vista, puede marcar en gran medida el resultado de un proceso de
 evaluación. Esta cuestión no es otra que responder con certeza a la pregunta
-``?`cuándo la información es relevante?".
+``?`cuándo la información es relevante?''.
 
 El término relevancia significa ``calidad o condición de relevante,
-importancia, significación", y el término relevante lo define como
-``importante o significativo". Entendiéndose, por extensión de las definiciones
+importancia, significación'', y el término relevante lo define como
+``importante o significativo''. Entendiéndose, por extensión de las definiciones
 anteriores, que una información recuperada se puede considerar relevante
 cuando el contenido de la misma posee alguna significación o importancia
 con motivo de la pregunta realizada por el usuario, es decir, con su
