--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -14,10 +14,29 @@
 \institution{Facultad de Matemática y Computación, Universidad de la Habana}
 
 \begin{abstract}
-	Resumen del artículo
+	Uno de los sub campos de la Recuperación de Información (RI) es la
+	Recueración de Información Geográfica (RIG). Los sistemas de RIG son de
+	gran utilidad en diferentes esferas de la sociedad, a nivel gubernamental,
+	empresarial, personal, etc. En este trabajo se realizará un análisis del
+	estado del arte de la RIG. Se abordarán algunas de las arquitecturas
+	implementadas, la evaluación de estos sistemas, sus aplicaciones, los
+	beneficios y limitantes así como desafíos futuros en este campo
+	investigativo.
 \end{abstract}
 
-\keywords{recuperación de información, información geográfica}
+\renewcommand\abstractname{Abstract}
+
+\begin{abstract}
+	One of the subfields of Information Retrieval (IR) is Geographic Information
+	Retrieval (GIR). GIR systems are very useful in different spheres of society,
+	government, business, personal, etc. In this work, an analysis of the state of
+	the art of RIG will be carried out. Some of the implemented architectures, the
+	evaluation of these systems, their applications, the benefits and limitations
+	as well as future challenges in this research field will be addressed.
+\end{abstract}
+
+\keywords{recuperación de información, información geográfica}{information
+retrieval, geographic information}
 
 \newpage
 \tableofcontents
