Add conclusions and recomendations

--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -48,6 +48,7 @@ retrieval, geographic information}
 \input{applications.tex}
 \input{pros_and_cons.tex}
 \input{challenges.tex}
+\input{conclusions.tex}
 
 
 \begin{thebibliography}{}
