--- a/evaluation.tex
+++ b/evaluation.tex
@@ -13,21 +13,21 @@ poseen de forma inherente.
 Los sistemas RGI, como cualquier otro sistema, son susceptibles de ser
 sometidos a evaluación, con el fin de que sus usuarios se encuentren en
 condiciones de valorar su efectividad y, de este modo, adquieran confianza
-en los mismos.
+en los mismos
 
 El proceso de los sistemas RGI en principio son bastante parecidos a los 
-SRI estándar, variando solo algunos pasos específicos que el propio
+sistemas SRI estándar, variando solo algunos pasos específicos que el propio
 sistema impone dada las caracteristicas del mismo y del problema que pretende
 resolver, como la detección de entidades geográficas. \cite{Kornai2005}
 
 En este punto surge una nueva cuestión, si bien podría parecer trivial a
 primera vista, puede marcar en gran medida el resultado de un proceso de
 evaluación. Esta cuestión no es otra que responder con certeza a la pregunta
-``?`cuándo la información es relevante?''.
+``?`cuándo la información es relevante?".
 
 El término relevancia significa ``calidad o condición de relevante,
-importancia, significación'', y el término relevante lo define como
-``importante o significativo''. Entendiéndose, por extensión de las definiciones
+importancia, significación", y el término relevante lo define como
+``importante o significativo". Entendiéndose, por extensión de las definiciones
 anteriores, que una información recuperada se puede considerar relevante
 cuando el contenido de la misma posee alguna significación o importancia
 con motivo de la pregunta realizada por el usuario, es decir, con su
@@ -40,6 +40,41 @@ se fueron transformando a través del tiempo y adaptándose a los nuevos
 sistemas que fueron apareciendo. Estos estudios son Cranfield,
 MEDLARS o SMART. \cite{bors2000}
 
+\subsection{Método Cranfield}\label{sec:Cranfield}
+
+Es uno de los primeros métodos de evaluación, su uso se ha estandarizado 
+siendo hoy en día ampliamente usado en casi todos los sistemas como la base de
+modelos más complejos.
+
+Evalúa la eficacia del sistema de recuperación de información según la
+dimensión temática del documento y las consultas. Es un sistema de evaluación
+donde se proporcionaba un objeto de estudio, una metodología de investigación
+científica y un lenguaje terminológico.
+
+Los autores determinaron la relevancia de los documentos en relación
+con las preguntas formuladas a través de una escala formada por cuatro niveles
+en detrimento de las escalas binarias (relevante \emph{vs} no relevante).
+Estas categorías son las siguientes: 
+
+\begin{enumerate}
+    \item Documentos recuperados y relevantes.
+    \item Documentos recuperados y no relevantes (ruido documental).
+    \item Documentos no recuperados y relevantes (silencio documental).
+    \item Documentos no recuperados y no relevantes. 
+\end{enumerate}
+
+\subsection{GeoCLEF}\label{sec:GeoCLEF}
+
+GeoCLEF (\emph{Geographical CCLEF}) es un marco de evaluación para la RGI que
+pertenece al foro internacional \emph{Cross Language Evaluation Forum} (CLEF).
+Fue una colaboración esfuerzo de los grupos de investigación de la Universidad
+de California, Berkeley y la Universidad de Sheffield
+
+El objetivo de GeoCLEF es proporcionar el marco de trabajo necesario en el que
+evaluar estos sistemas RIG en búsquedas de información, teniendo en cuenta
+aspectos geo-referenciales y multiling\"ues. Es una tarea perteneciente al CLEF
+que se viene celebrando desde 2005. Se ejecutó, en un principio, como una
+prueba piloto para evaluar la recuperación de documentos multiling\"ues con
+énfasis en la búsqueda geográfica.
 
 \newpage
-
