Add missing references

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -44,7 +44,7 @@ MEDLARS o SMART. \cite{bors2000}
 
 Es uno de los primeros métodos de evaluación, su uso se ha estandarizado 
 siendo hoy en día ampliamente usado en casi todos los sistemas como la base de
-modelos más complejos.
+modelos más complejos.\cite{hosseini2013}
 
 Evalúa la eficacia del sistema de recuperación de información según la
 dimensión temática del documento y las consultas. Es un sistema de evaluación
@@ -68,7 +68,8 @@ Estas categorías son las siguientes:
 GeoCLEF (\emph{Geographical CCLEF}) es un marco de evaluación para la RGI que
 pertenece al foro internacional \emph{Cross Language Evaluation Forum} (CLEF).
 Fue una colaboración esfuerzo de los grupos de investigación de la Universidad
-de California, Berkeley y la Universidad de Sheffield
+de California, Berkeley y la Universidad de Sheffield.
+\cite{gey2005, kornai2005}
 
 El objetivo de GeoCLEF es proporcionar el marco de trabajo necesario en el que
 evaluar estos sistemas RIG en búsquedas de información, teniendo en cuenta
