--- a/irsarticle.tex
+++ b/irsarticle.tex
@@ -227,6 +227,23 @@ CLEF (Working Notes).
 information retrieval: Modeling uncertainty of user's context. Fuzzy Sets and
 Systems, 196, 105-124.
 
+\bibitem{gey2005}
+Gey, F., Larson, R., Sanderson, M., Joho, H., Clough, P., \& Petras, V.
+(2005, September). GeoCLEF: the CLEF 2005 cross-language geographic information
+retrieval track overview. In Workshop of the cross-language evaluation forum
+for european languages (pp. 908-919). Springer, Berlin, Heidelberg.
+
+\bibitem{kornai2005}
+Kornai, A. (2005, September). Evaluating geographic information retrieval.
+In Workshop of the Cross-Language Evaluation Forum for European Languages
+(pp. 928-938). Springer, Berlin, Heidelberg.
+
+\bibitem{hosseini2013}
+Hosseini, S. A., Lashgari, H., Choi, J. W., Nicot, J. P., Lu, J., \& Hovorka,
+S. D. (2013). Static and dynamic reservoir modeling for geological CO2
+sequestration at Cranfield, Mississippi, USA. International Journal of
+Greenhouse Gas Control, 18, 449-462.
+
 \end{thebibliography}
 
 \end{document}
